--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "node-html-parser": "^1.1.16",
-    "pug": "2.0.0-beta11"
+    "pug": "^2.0.4",
+    "reseplaneraren": "file:local_modules/reseplaneraren"
   },
   "nodemonConfig": {
     "ignore": [
